Fix bio alignment issue

--- a/foundation/theme/theme.scss
+++ b/foundation/theme/theme.scss
@@ -41,7 +41,7 @@
 }
 
 .bio {
-  margin:0rem;
+  margin:0px 0px 0px 16px;
   display:none;
   font-size:.95rem;
   p {
