--- a/style.css
+++ b/style.css
@@ -2586,7 +2586,7 @@ select[multiple] {
 }
 
 .bio {
-  margin: 0rem;
+  margin: 0px 0px 0px 16px;
   display: none;
   font-size: .95rem;
 }
